Fix progressive blur on dark mode

--- a/src/app.scss
+++ b/src/app.scss
@@ -33,6 +33,7 @@
 	--accent-bg: hsl(303, 73%, 81%);
 	--accent-fg: hsl(0, 0, 10%);
 	--bg: hsl(0, 0%, 100%);
+	--bg-transparent: hsla(0, 0%, 100%, 0.6);
 	--fg: hsl(0, 0%, 10%);
 	--fg-muted: hsl(0, 0%, 50%);
 	--fg-muted-alt: hsl(0, 0%, 75%);
@@ -44,6 +45,7 @@
 	--accent-bg: hsl(304, 41%, 21%);
 	--accent-fg: hsl(303, 73%, 81%);
 	--bg: hsl(0, 0%, 8%);
+	--bg-transparent: hsla(0, 0%, 8%, 0.8);
 	--fg: hsl(0, 0%, 90%);
 	--fg-muted: hsl(0, 0%, 50%);
 	--fg-muted-alt: hsl(0, 0%, 25%);
